Part about estimation

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,13 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+  sidebar:
+    style: "docked"
+    search: true
+    contents:
+      - section: "Special topics"
+        contents:
+          - exercise-1.qmd
 
 format:
   html:
